JPIERE-0366 Clear all Selection - maintenance